--- a/webapps/ROOT/WEB-INF/classes/templates/modules/community/route_tracking.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/community/route_tracking.html
@@ -144,6 +144,7 @@
                                 style="width:100%;"
                                 v-model="creatEditForm.date"
                                 type="datetime"
+                                :picker-options="pickerOptions"
                                 value-format="timestamp"
                                 placeholder="请填写发布时间">
                             </el-date-picker>
