--- a/webapps/ROOT/WEB-INF/classes/templates/modules/content/article_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/content/article_list.html
@@ -172,6 +172,8 @@
                 <el-table-column prop="newsReleaseTime" label="发布时间" width="95"></el-table-column>
                 <el-table-column prop="newsAuthor" label="作者"></el-table-column>
                 <el-table-column prop="userName" label="发布人"></el-table-column>
+                <el-table-column prop="newsModTime" label="更新时间" width="95"></el-table-column>
+                <el-table-column prop="modUserName" label="更新人"></el-table-column>
                 <el-table-column prop="newsCount" label="阅读量">
                     <template slot-scope="scope">
                         <div v-if="scope.row.newsCount == ''">0</div>
