--- a/webapps/ROOT/WEB-INF/classes/templates/modules/resource/cover_image.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/resource/cover_image.html
@@ -156,7 +156,7 @@
                                 :auto-upload="false"
                                 :on-success="handleAvatarSuccess"
                                 :on-change="coverImgFileChange">
-                                <img v-if="coverImgForm.picUrl" :src="coverImgForm.picUrl" class="avatar">
+                                <img id="oImg" v-if="coverImgForm.picUrl" :src="coverImgForm.picUrl" class="avatar">
                                 <i v-else class="el-icon-plus avatar-uploader-icon"></i>
                             </el-upload>
                         </el-form-item>
