--- a/webapps/ROOT/WEB-INF/classes/templates/modules/risk/sensitive_words.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/risk/sensitive_words.html
@@ -16,13 +16,25 @@
             <div class="cv_content_square">
                 <el-form :model="searchForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                     <el-row class="el-row-h60">
-                        <el-col :span="11">
+                        <el-col :span="10">
                             <el-form-item label="敏感词" style="margin:0;">
                                 <el-input
                                 clearable
                                 type="text"
                                 v-model="searchForm.keyword"
                                 auto-complete="off"></el-input>
+                            </el-form-item>
+                        </el-col>
+                        <el-col :span="7">
+                            <el-form-item label="类型" style="margin:0;">
+                                <el-select v-model="searchForm.type" placeholder="" style="width:100%;" @change="selectTypeChange" clearable>
+                                    <el-option
+                                        v-for="item in typeOptions"
+                                        :key="item.code"
+                                        :label="item.value"
+                                        :value="item.code">
+                                    </el-option>
+                                </el-select>
                             </el-form-item>
                         </el-col>
                         <el-col :span="3" :offset="1" class="el-row-h40">
@@ -45,6 +57,15 @@
                 <el-table :data="sensitiveWordTableData" style="width: 100%; margin:30px auto;" stripe @selection-change="handleSelectionChange">
                     <el-table-column type="selection" width="55"></el-table-column>
                     <el-table-column prop="keyword" label="敏感词" width="200"></el-table-column>
+                    <el-table-column prop="type" label="类型"  width="110">
+                        <!--0原始库，1是政治，2是行业 3是竞品-->
+                        <template slot-scope="scope">
+                            <el-tag v-if="scope.row.type == 1" type="warning">政治</el-tag>
+                            <el-tag v-if="scope.row.type == 2" type="">行业</el-tag>
+                            <el-tag v-if="scope.row.type == 3" type="success">竞品</el-tag>
+                        </template>
+                    </el-table-column>
+                    <el-table-column prop="source" label="来源" width="200"></el-table-column>
                     <el-table-column prop="crtUserId" label="创建人编号"></el-table-column>
                     <el-table-column prop="crtTime" label="创建时间"></el-table-column>
                     <el-table-column label="操作" width="90" fixed="right">
@@ -66,16 +87,44 @@
             </div>
 
             <!--新增敏感词弹框-->
-            <el-dialog title="新增敏感词" :visible.sync="showAddBox" width="50%">
-                <el-form :model="creatForm" :rules="creatFormRules"  ref="creatForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right">
+            <el-dialog title="新增敏感词" :visible.sync="showAddBox" width="70%">
+                <el-form :model="creatForm" :rules="creatFormRules" ref="creatForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right">
+                    <el-row class="el-row-h120">
+                        <el-col :span="24">
+                            <el-form-item label="新增词汇" prop="keywords" style="margin:0;">
+                                <el-input
+                                placeholder="多个敏感词，每个词一行"
+                                type="textarea"
+                                clearable
+                                :autosize="{ minRows: 4, maxRows: 4}"
+                                type="text"
+                                v-model="creatForm.keywords"
+                                auto-complete="off"></el-input>
+                            </el-form-item>
+                        </el-col>
+                    </el-row>
                     <el-row class="el-row-h70">
                         <el-col :span="24">
-                            <el-form-item label="新增词汇" prop="keyword" style="margin:0;">
+                            <el-form-item label="类型" prop="type" style="margin:0;">
+                                <el-select v-model="creatForm.type" placeholder="" style="width:100%;">
+                                    <el-option
+                                        v-for="item in typeOptions"
+                                        :key="item.code"
+                                        :label="item.value"
+                                        :value="item.code">
+                                    </el-option>
+                                </el-select>
+                            </el-form-item>
+                        </el-col>
+                    </el-row>
+                    <el-row class="el-row-h70">
+                        <el-col :span="24">
+                            <el-form-item label="来源" prop="source" style="margin:0;">
                                 <el-input
-                                clearable
-                                type="text"
-                                v-model="creatForm.keyword"
-                                auto-complete="off"></el-input>
+                                    clearable
+                                    type="text"
+                                    v-model="creatForm.source"
+                                    auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
                     </el-row>
